--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 dj-database-url==0.5
 Django==5.1.3
 django-allauth==65.2.0
+django-summernote~=0.8.20.0
 gunicorn==20.1
 psycopg2==2.9
 sqlparse==0.5.2
